--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,11 +13,8 @@
 @use './components/info.scss' as *;
 @use './base/mediaquery' as *;
 
-
-
 $bg-color: #ffffff;
 $font-family: 'Poppins', 'Roboto';
-
 
 * {
   margin: 0;
@@ -25,18 +22,13 @@ $font-family: 'Poppins', 'Roboto';
   box-sizing: border-box;
 }
 
-html {
-  font-size: 16px; 
- 
-}
-
-body {
+html,body {
+  font-size: 16px;
   background-color: $bg-color;
   font-family: $font-family;
-  margin: 0;
-  // margin-top: 60px;
-  
+  overflow-x: hidden;
 }
+
 a {
   text-decoration: none;
   color: inherit; 
